core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__functions__issue_15698.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT time, LAST(usage_idle) AS last_idle, DIFFERENCE(LAST(usage_idle)) AS delta FROM cpu GROUP BY cpu, time(20s) FILL(none)\")"
---
Sort: cpu ASC NULLS LAST, time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, last_idle:Float64;N, delta:Float64;N]
  Projection: Dictionary(Int32, Utf8("cpu")) AS iox::measurement, time, cpu.cpu AS cpu, get_field(selector_last(cpu.usage_idle,cpu.time), Utf8("value")) AS last_idle, difference(selector_last(cpu.usage_idle,cpu.time)[value]) AS delta [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, last_idle:Float64;N, delta:Float64;N]
    Filter: time <= TimestampNanosecond(1672531219999999999, None) [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, selector_last(cpu.usage_idle,cpu.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, difference(selector_last(cpu.usage_idle,cpu.time)[value]):Float64;N]
      WindowAggr: windowExpr=[[difference(get_field(selector_last(cpu.usage_idle,cpu.time), Utf8("value"))) PARTITION BY [cpu.cpu] ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS difference(selector_last(cpu.usage_idle,cpu.time)[value])]] [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, selector_last(cpu.usage_idle,cpu.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N, difference(selector_last(cpu.usage_idle,cpu.time)[value]):Float64;N]
        Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 20000000000 }"), cpu.time, TimestampNanosecond(0, None)) AS time, cpu.cpu]], aggr=[[selector_last(cpu.usage_idle, cpu.time)]] [time:Timestamp(Nanosecond, None);N, cpu:Dictionary(Int32, Utf8);N, selector_last(cpu.usage_idle,cpu.time):Struct([Field { name: "value", data_type: Float64, nullable: true }, Field { name: "time", data_type: Timestamp(Nanosecond, None), nullable: true }]);N]
          Filter: cpu.time <= TimestampNanosecond(1672531200000000000, None) [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
            Filter: cpu.usage_idle IS NOT NULL [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
              TableScan: cpu [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
